# IKAPI

./: .gitignore  LICENSE  README.md
IKApiApp/src/main/java/com/ikapi/: IKApiMain.java
java/: pom.xml  run.sh
java/src/main/java/org/indiankanoon/: IKApiMain.java
java/src/test/java/com/ikapi/: AppTest.java
mcp_server/: .env.example  README.md  pyproject.toml  server.py  test.py
python/: ikapi.py
